# adaptite

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  mise.toml
.github/workflows/: ci.yml  release.yml
benches/: graph.rs
examples/: cell_thunk_showcase.rs  readme_md_01.rs  readme_md_02.rs  readme_md_03.rs  screen_router.rs  signal_thunk_showcase.rs  spreadsheet.rs  stock_ticker.rs  tracing_subscriber_showcase.rs
src/: cell.rs  effect.rs  event.rs  id.rs  lib.rs  observable.rs  reactor.rs  resource.rs  scope.rs  signal.rs  source.rs  thunk.rs  watch.rs
tests/: fine_grained.rs
