[package]
name = "adaptite"
version = "0.1.0"
edition = "2024"

[dependencies]
runite = { path = "../runite" }
tracing = { version = "0.1", default-features = false }
hashbrown = "0.17"

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "std",
] }
