[package]
name = "adaptite"
version = "0.1.0"
edition = "2024"

[dependencies]
runite = "0.1.0"
tracing = { version = "0.1", default-features = false }
hashbrown = "0.17"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "std",
] }

[[bench]]
name = "graph"
harness = false
